# LuminaGI-CudaRef

./: .gitignore  CMakeLists.txt  README.md  bench_occupancy.bat  build_bvh_test.bat  build_cuda_ref.bat  build_hello.bat  build_loader_test.bat  build_thrust_smoke.bat  ptxas_check.bat
docs/: accumulate.ncu-rep  accumulate_lb4.ncu-rep  ada_microarch.md  denoiser.md  epoch_sweep.md  gbuffer_sweep.md  kernel.sass.txt  lr_sweep.md  nsight_compute_report.txt  nsight_compute_report_lb4.txt  onnx_export.md  perceptual_sweep.md  portfolio_copy.md  profile_analysis.md  ray_sort_plan.md  v5_deep.md  v5_quickref.md
include/: bvh.h  scene.h  vecmath.h
ml/: gen_dataset.py  train.py
ml/data/: batch.txt
ml/data_gb/: batch.txt
ml/runs/: log_ep120.txt  log_ep40.txt  log_gen_gb.txt  log_lr2e-3.txt  log_lr5e-4.txt  log_perc05.txt  log_perc10.txt  log_perc20.txt  log_v2_gb.txt  log_v2_rgb.txt  train_log.txt
scenes/: mock_scene.json
src/: bvh.cpp  hello_cuda.cu  main.cpp  pathtracer.cu  scene_loader.cpp  test_bvh.cpp  test_load_scene.cpp  thrust_smoke.cu
tools/: build_trt_engine.py  denoise.py  denoise_onnx.py  denoise_trt.py  diff.py  eval_checkpoints.py  export_onnx.py  validate.py
